--- a/implementation/requirements.txt
+++ b/implementation/requirements.txt
@@ -1,15 +1,7 @@
-torch
-torchaudio
-torchvision
+
+streamlit
 numpy
-librosa
-scipy
-pandas
 matplotlib
-seaborn
-tqdm
-scikit-learn
-jupyter
-notebook
+plotly
+pydub
 soundfile
-sklearn
